feat: add UpdateUserByID and DeleteUserByID
